--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>de.xxschrandxx.wsc</groupId>
 	<artifactId>wscprofile</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 
 	<name>WSC-Minecraft-Profile</name>
 	<url>https://github.com/xXSchrandXx/WSC-Minecraft-Profile</url>
